Fixed opening crawl being cut short

--- a/src/pages/filmDetails/filmDetails.module.scss
+++ b/src/pages/filmDetails/filmDetails.module.scss
@@ -84,7 +84,7 @@
     transform: rotateX(20deg) translateZ(0);
   }
   100% { 
-    top: -400px;
+    top: -500px;
     transform: rotateX(30deg) translateZ(-100px);
   }
 }
